--- a/css/reset.css
+++ b/css/reset.css
@@ -19,7 +19,8 @@ ul,ol,li{
     list-style:none;
 }
 h1,h2,h3,h4,h5,h6,strong{
-    font-weight:normal;
+    font-weight:400;
+    font-size:inherit;
 }
 img,span,video,audio,label,input,textarea,select,iframe{
     display:block;
