--- a/css/default.css
+++ b/css/default.css
@@ -111,7 +111,7 @@
     transition:0.3s;
 }
 .nav.show-nav{
-    height:110px;
+    height:130px;
     background-color:#005826;
 }
 .member{
@@ -157,3 +157,65 @@
     width:24px;
 }
 
+
+.footer{
+    position: relative;
+    padding:12px 0;
+    background-color:#005826;
+    color:#fff;
+
+}
+.footer strong{
+    font-weight:700;
+}
+.footer address{
+    font-style:normal;
+    font-weight:300;
+    font-size:12px;
+    line-height:18px;
+}
+.footer .sns{
+    display: flex;
+    flex-flow:row nowrap;
+    justify-content:center;
+
+}
+.footer .sns a{
+    margin:0 5px;
+    font-size:20px;
+}
+.footer .move-top{
+    position:absolute;
+    right:16px;
+    top:16px;
+    width:40px;
+    height:40px;
+    border:2px solid #fff;
+    border-radius:50%;
+    font-size:20px;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    
+}
+.line{
+    height:1px;
+    margin-bottom:27px;
+    background-color:#444;
+}
+
+.modal{
+    display:none;
+    position:fixed;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    z-index:999999;
+    background-color:rgba(0,0,0,0.5);
+}
+.modal .contents{
+    width:70%;
+    margin:50px auto;
+    background-color:#fff;
+}
